# k8s-blueprint

./: .gitignore  Makefile  README.md  ansible.cfg  pyproject.toml
app/: __init__.py
app/inventory/: README.md  __init__.py  cli.py  env_file.py  generator.py  mac.py  models.py
docs/: index.md  structure.md
docs/bootstrap/: README.md
docs/fine-tuning/: README.md
docs/upgrade/: README.md
env/: .env.example  README.md  ssh_config_lab.example
k8s/: README.md
lab/: README.md
make/: README.md  ansible.mk  colors.mk  config.mk  inventory.mk  setup.mk  ssh.mk  targets.mk
provisioning/: README.md  ansible.cfg  site.yml
provisioning/collections/: README.md  requirements.yml
provisioning/inventory/: README.md  manifest.yml
provisioning/inventory/_shared/group_vars/: all.yml  dhcp_reservations.yml  kvm_hosts.yml
provisioning/inventory/broetec-core/: hosts.ini
provisioning/inventory/broetec-core/group_vars/: kvm_hosts.yml
provisioning/inventory/broetec-monitor/: group_vars  hosts.ini
provisioning/inventory/broetec-storage/: hosts.ini
provisioning/inventory/example/: hosts.ini
provisioning/inventory/example/group_vars/: all.yml  vms.yml
provisioning/roles/00_install_kvm/: README.md
provisioning/roles/00_install_kvm/defaults/: main.yml
provisioning/roles/01_create_vm/: README.md
provisioning/roles/02_prepare_vm/: README.md
provisioning/roles/03_install_k3s/: README.md
provisioning/roles/03_install_rke2/: README.md
provisioning/roles/04_deploy_k8s/: README.md
provisioning/templates/: README.md  cloud-init.j2  network-config.j2
scripts/inventory/: README.md
tests/: test_inventory_generator.py  test_inventory_mac.py
(+62 files in other folders)
