[project]
name = "k8s-blueprint"
version = "0.1.0"
description = "Ansible e ferramentas do laboratório KVM (Broetec k8s-blueprint)."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ansible-core>=2.16,<2.21",
    "ansible-pylibssh>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.6.2",
    "python-semantic-release>=10.0.0,<11.0.0",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 'INFO'
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.semantic_release]
build_command = "bash scripts/build_for_release.sh"
upload_to_vcs_release = true
hvcs = "github"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "app/__init__.py:__version__:nf",
]

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches]
main = { match = "main", prerelease = true, prerelease_token = "rc"}
staging = { match = "staging", prerelease = false}

[tool.semantic_release.commit_parser_options]
patch_tags = ["chore", "fix", "refactor"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
